# hate-speech-artifacts

./: .gitignore  LICENSE  README.md  requirements.txt
artifacts-statement/: README.md
artifacts-statement/ranked-artifacts/: reddit_hateful-class.tsv
lexartifacts-package/: README.md  pyproject.toml
lexartifacts-package/src/lexartifacts/: lexical_artifacts.py  stopwords.json  utils.py
machamp/: predict.py  requirements.txt
machamp/configs/: cad.bert.del-sp-id.json  cad.bert.del-sp-nid.json  cad.bert.f25.1.json  cad.bert.f25.2.json  cad.bert.f25.3.json  cad.bert.f33.1.json  cad.bert.f33.2.json  cad.bert.f33.3.json  cad.bert.f50.1.json  cad.bert.f50.2.json  cad.bert.f50.3.json  cad.bert.mask-sp-id.json  cad.bert.mask-sp-nid.json  cad.json  founta.bert.del-sp-id.json  founta.bert.del-sp-nid.json  founta.bert.f25.1.json  founta.bert.f25.2.json  founta.bert.f25.3.json  founta.bert.f33.1.json  founta.bert.f33.2.json  founta.bert.f33.3.json  founta.json  (+36 more)
scripts/: 1.prepare-data.py  1.prepare-data.sh  2.train-filtering-baselines.sh  2.train-vanilla-baselines.sh  3.compute-contributions.py  3.compute-contributions.sh  4.identify-artifacts.py  4.identify-artifacts.sh  5.create-variants.py  5.create-variants.sh  6.create-subsets.py  6.create-subsets.sh  7.train-sp-id-nid-methods.sh  8.predict-filtering-baselines-subset.sh  8.predict-filtering-baselines.sh  8.predict-mask-del-methods-subset.sh  8.predict-mask-del-methods.sh  8.predict-vanilla-baselines-subset.sh  8.predict-vanilla-baselines.sh  compute_avg_score_acc.py  compute_avg_score_fpr.py  compute_fpr.py  utils.py
(+18 files in other folders)
