[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexartifacts"
version = "0.1.0"
authors = [
  { name="Alan Ramponi", email="email@example.com" },
]
description = "A python package for computation and reporting of lexical artifacts"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "transformers>=3.0.0", 
    "pandas>=1.2.0",
    "emoji==1.7.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dhfbk/hate-speech-artifacts"